force-app/main/default/objects/CRMforNonProfit__Contact_to_Process__c/CRMforNonProfit__Contact_to_Process__c.object-meta.xml
<CustomObject>
    <label>Contact to Process</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ContactToProcess Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts to Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>