force-app/main/default/objects/CRMforNonProfit__Contact_to_Process__c/fields/CRMforNonProfit__Certificate_Sending_Status__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Certificate_Sending_Status__c</fullName>
    <label>Certificate Sending Status</label>
    <referenceTo>CRMforNonProfit__Certificate_Sending_Status__c</referenceTo>
    <relationshipLabel>Contacts to Process</relationshipLabel>
    <relationshipName>Contacts_to_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>