force-app/main/default/objects/CRMforNonProfit__Contact_to_Process__c/fields/CRMforNonProfit__Error__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Error__c</fullName>
    <description>Error message from batch processing</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>