force-app/main/default/objects/CRMforNonProfit__Contact_to_Process__c/fields/CRMforNonProfit__Is_Error__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Is_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Error</label>
    <type>Checkbox</type>
</CustomField>